# osmnx-catchments

./: .gitignore  .osmnx_bfce933bf36bc0e1afb65c1da3198f1dd19f02be.vrt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml
notebooks/: .osmnx_fd6a9dea095bcefc7ca210901617a8822ea085c9.vrt  Porirua_spatial_analysis_with_slope.ipynb  Untitled.ipynb  osm_walk_catchments_porirua_city_stations.ipynb  osm_walk_catchments_porirua_city_stations_v1.ipynb  trial_setups.ipynb
notebooks/input_data/: stations.csv
notebooks/input_data/linz-porirua-lidar-1m-dem-2013-2014/: DEM_BP31_2013_1000_4546.aux  DEM_BP31_2013_1000_4546.tfw  DEM_BP31_2013_1000_4546.tif  DEM_BP31_2013_1000_4547.aux  DEM_BP31_2013_1000_4547.tfw  DEM_BP31_2013_1000_4547.tif  DEM_BP31_2013_1000_4548.aux  DEM_BP31_2013_1000_4548.tfw  DEM_BP31_2013_1000_4548.tif  DEM_BP31_2013_1000_4549.aux  DEM_BP31_2013_1000_4549.tfw  DEM_BP31_2013_1000_4549.tif  DEM_BP31_2013_1000_4550.aux  DEM_BP31_2013_1000_4550.tfw  DEM_BP31_2013_1000_4550.tif  DEM_BP31_2013_1000_4550.xml  DEM_BP31_2013_1000_4646.aux  DEM_BP31_2013_1000_4646.tfw  DEM_BP31_2013_1000_4646.tif  DEM_BP31_2013_1000_4647.aux  (+53 more)
osmcatch/: __init__.py  catchment.py  catchment.sync-conflict-20210608-013954-UMJUJM2.py  elevation.py  network.py  plot.py  walk.py
src/osmnx-catchments/: walk.py
tests/: test_catchment.py  test_elevation.py  test_network.py
tests/test_data/: DEM_BP31_2013_1000_4747.aux  DEM_BP31_2013_1000_4747.tif  DEM_BP31_2013_1000_4848.aux  DEM_BP31_2013_1000_4848.tif  DEM_BP31_2013_1000_4850.aux
