[metadata]
name = osmcatch
version = 0.0.1
author = Adam Lawrence
author_email = alaw005@gmail.com
description = Analyse network catchments using osmnx package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alaw005/osmnx-catchments
project_urls =
    Bug Tracker = https://github.com/alaw005/osmnx-catchments/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    osmnx>=1.1.1
python_requires = >=3.6

[options.packages.find]
where = src

